# rp2040-music-machine

./: .gitignore  CMakeLists.txt  Makefile  common.c  common.h  compile_commands.json  notes.h  program.c  program.h  program.hex
music/: bach.c  lostelf.c  musicdata.c  musicdata.h  notationdefines.h  testnotation.c  viricorda.c
